# rag-system-server

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml
api/: dependencies.py  main.py  schemas.py
api/routes/: __init__.py
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  Dashboard.tsx
frontend/src/components/evaluation/: EvaluationPage.tsx  LatencyChart.tsx  MetricsCard.tsx  ProfileSelector.tsx  index.ts
frontend/src/services/: api.ts  evaluationApi.ts
frontend/src/types/: chat.ts  evaluation.ts
nodes/: base.py  retriever.py
prompts/: __init__.py
schemas/: __init__.py  models.py  preprocessing.py  state.py
services/: __init__.py  llm.py  reranker.py
services/preprocessing/: __init__.py  chunking.py  parsers.py
src/: __init__.py
src/api/: main.py  schemas.py
src/api/routes/: admin.py  query.py  upload.py
src/application/: __init__.py  container.py  state.py  workflow.py
src/config/: settings.py
src/core/: config.py  logging.py  profiles.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  chunk.py  conversation.py  document.py  models.py  user.py
src/domain/nodes/: __init__.py  base.py  generator.py  query_rewrite.py  retriever.py  simple_generator.py
src/domain/prompts/: __init__.py  templates.py
src/evaluation/: __init__.py  runner.py  schemas.py
src/evaluation/metrics/: __init__.py  generation.py  retrieval.py
src/graph/: workflow.py
src/infrastructure/: __init__.py  auth_service.py  bm25_service.py  cache_service.py  database_service.py  llm_service.py  reranker_service.py  vectorstore_service.py
src/infrastructure/preprocessing/: __init__.py  chunking.py  normalizer.py  parsers.py  pipeline.py
src/infrastructure/repositories/: __init__.py  conversation_repository.py  document_repository.py  user_repository.py
src/nodes/: __init__.py  generator.py  query_rewrite.py  simple_generator.py
src/presentation/: __init__.py
src/presentation/api/: __init__.py  dependencies.py  main.py
src/presentation/api/routes/: __init__.py  admin.py  auth.py  evaluation.py  query.py  upload.py
src/presentation/dto/: __init__.py  schemas.py
src/prompts/: templates.py
src/schemas/: preprocessing.py
src/services/: bm25.py  reranker.py  vectorstore.py
src/services/preprocessing/: normalizer.py  parsers.py  pipeline.py
tests/: __init__.py  conftest.py
tests/integration/: test_evaluation.py
tests/unit/domain/: test_generator_node.py  test_query_rewrite_node.py  test_retriever_node.py
tests/unit/infrastructure/: __init__.py  test_bm25_service.py  test_cache_service.py  test_preprocessing.py  test_vectorstore_service.py
