[project]
name = "rag-pipeline"
version = "1.0.0"
description = "OpenAI API 기반 RAG Pipeline 서버"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "weaviate-client>=4.9.0",
    # Reranker
    "sentence-transformers>=3.0.0",
    # Preprocessing
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "langchain-experimental>=0.3.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
